[package]
name = "condition-racers-tp2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "coffee_maker"
path = "src/coffee_maker/main.rs"

[lib]
name = "lib"
path = "src/common/lib.rs"

[dependencies]
rand = "0.7"
actix = "0.13.0"
actix-rt = "2.8" # <-- Runtime for actix

log = "0.4.17"
simple_logger = "4.1.0"

async-std = "1.12.0"
async-trait = "0.1.68"

bincode = "1.3.3"
serde = { version = "1.0.163", features = ["derive"] }

[dev-dependencies]
mockall = "0.10.2"